--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>GithubPages</title>
-	<base href="/" />
+	<base href="https://kaki005.github.io/LoginSample/" />
 </head>
 
 <body>
